# web_service_practice

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  log4rs.yaml
src/: lib.rs  main.rs
src/adapters/: claims_trait.rs  cloud_storage_trait.rs  hashmap_trait.rs  mod.rs  mongo_trait.rs  upload_file_trait.rs  user_trait.rs
src/claims/: mod.rs
src/claims/entities/: claims.rs
src/claims/error/: claims_error.rs  mod.rs
src/claims/types/: mod.rs  role.rs  token_type.rs
src/claims/use_cases/: claims_use_case.rs  claims_use_case_trait.rs  mod.rs
src/container/: container.rs
src/entities/: claims_entity.rs  image_file_entity.rs  mod.rs  upload_file_entity.rs  user.rs  user_entity.rs
src/entities/user/: user.rs
src/frameworks/: mod.rs
src/frameworks/common/: multipart.rs
src/frameworks/container/: container.rs
src/frameworks/errors/: auth_error.rs  file_error.rs  mod.rs  multipart_error.rs  response_code.rs  to_u16_trait.rs  user_error.rs
src/frameworks/extensions/: hashmap_extension.rs  mod.rs
src/frameworks/google/: mod.rs  (+1 more)
src/mongo/: mongo_client.rs
src/response/: mod.rs  response_data.rs  response_empty.rs  response_error.rs
src/use_cases/: claims_use_case.rs  factory_trait.rs  mod.rs  user_use_case.rs
src/user/: mod.rs
tests/: claims_tests.rs  mongo_client_tests.rs  mongo_tests.rs  response_tests.rs  services_tests.rs  use_cases_tests.rs  user_tests.rs  web_tests.rs
tests/common/: fake_data.rs  functions.rs  mod.rs
tests/mocks/: mod.rs  user_mocks.rs
tests/repositories/: mod.rs  user_repository_tests.rs
tests/services/: mod.rs  user_service_tests.rs
tests/use_cases/: mod.rs  user_use_case_tests.rs
tests/user_tests/: user_entity_tests.rs  user_integration_tests.rs  user_router_tests.rs  user_use_case_tests.rs
tests/web/: mod.rs  user_web_tests.rs
(+37 files in other folders)
