[package]
name = "web_service_pratice"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-http = "3.3.1"
actix-multipart = "0.6.0"
mongodb = "2.6.0"
serde = "1.0.180"
serde_json = "1.0.104"
async-trait = "0.1.72"
thiserror = "1.0.44"
anyhow = "1.0.72"
chrono = "0.4.26"
bcrypt = "0.15.0"
dotenv = "0.15.0"
log = "0.4.19"
log4rs = "1.2.0"
mime = "0.3.17"