[package]
name = "web_service_pratice"
version = "0.1.0"
edition = "2021"

[dependencies]
# web framework
actix-web = "4.4.1"
actix-http = "3.5.1"
actix-multipart = "0.6.1"
actix-rt = "2.9.0"

# database
mongodb = "2.8.0"

# Serialization
serde = "1.0.194"
serde_json = "1.0.111"

# Async
async-trait = "0.1.77"
futures-util = "0.3.30"

# Error handling
thiserror = "1.0.56"
anyhow = "1.0.79"

# Time
chrono = "0.4.31"

# Hash
bcrypt = "0.15.0"

# Env
dotenv = "0.15.0"

# Log
log = "0.4.20"
log4rs = "1.2.0"

# Google Cloud Storage
google-cloud-storage = "0.15.0"
mime = "0.3.17"

# Injector
shaku = "0.6.1"

# JWT
jsonwebtoken = "9.2.0"

[dev-dependencies]
mockall = "0.12.1"